# RobotIndoorNav-Bench

./: .gitignore  README.md
codes/ros2_ws/: .gitattributes  .gitignore
codes/ros2_ws/results_clutter/: all_runs_clutter.csv  summary_clutter.csv
codes/ros2_ws/results_clutter/summary/: summary.csv
codes/ros2_ws/results_corridor/: all_runs_corridor.csv
codes/ros2_ws/results_house_dynamic/: all_runs_house_dynamic.csv  summary_house_dynamic.csv
codes/ros2_ws/results_house_dynamic/summary/: summary.csv
codes/ros2_ws/results_maze/: summary_maze.csv
codes/ros2_ws/results_maze/summary/: summary.csv
codes/ros2_ws/src/: PATCH_NOTES.md
codes/ros2_ws/src/g1_cogar_nav_benchmark/: CMakeLists.txt
codes/ros2_ws/src/g1_cogar_nav_benchmark/config/: benchmark_scenarios.yaml  nav2_dwb.yaml  nav2_dwb_working.yaml  nav2_teb.yaml  nav2_teb_template.yaml  nav_to_pose_teb_humble.xml  planner_profiles.yaml  topological_blockage.yaml  topological_clutter.yaml  topological_corridor.yaml  topological_doorway.yaml  topological_multi_goal.yaml
codes/ros2_ws/src/g1_cogar_nav_benchmark/g1_cogar_nav_benchmark/: g1_robot_simulation.py
codes/ros2_ws/src/g1_cogar_nav_benchmark/include/g1_cogar_nav_benchmark/: geometry_utils.hpp  scenario_loader.hpp
codes/ros2_ws/src/g1_cogar_nav_benchmark/launch/: benchmark_only.launch.py  k3_nav_bringup.launch.py
codes/ros2_ws/src/g1_cogar_nav_benchmark/maps/: clutter.pgm  doorway.pgm  house.pgm  house_dynamic.pgm  house_dynamic.yaml  multigoal.pgm  multigoal.yaml
codes/ros2_ws/src/g1_cogar_nav_benchmark/report/: cpp_report_additions.tex
codes/ros2_ws/src/g1_cogar_nav_benchmark/rviz/: benchmark.rviz
codes/ros2_ws/src/g1_cogar_nav_benchmark/scripts/: dynamic_obstacle_commander.py  house_dynamic_obstacle_commander.py  run_all_benchmarks.sh
codes/ros2_ws/src/g1_cogar_nav_benchmark/src/: benchmark_logger_node.cpp  benchmark_runner.cpp  scenario_loader.cpp  subsumption_mux_node.cpp  topological_graph.cpp
codes/ros2_ws/src/g1_cogar_nav_benchmark/tools/: aggregate_results.py  summarize_results.py  update_report_data.py
codes/ros2_ws/src/g1_cogar_nav_benchmark/worlds/: blockage.world  corridor.world  doorway.world  house.world  maze.world  multigoal.world
codes/ros2_ws/src/g1_description_ros2/: CMakeLists.txt
codes/ros2_ws/src/g1_description_ros2/launch/: display.launch.py
codes/ros2_ws/src/g1_gazebo/: CMakeLists.txt
codes/ros2_ws/src/g1_gazebo/launch/: spawn_g1.launch.py
codes/ros2_ws/src/g1_gazebo/worlds/: empty.world
results_clutter/: summary_clutter.csv
results_clutter/summary/: all_runs.csv
results_corridor/: summary_corridor.csv
results_doorway/: all_runs_doorway.csv  summary_doorway.csv
results_house_dynamic/: all_runs_house_dynamic.csv  summary_house_dynamic.csv
results_house_dynamic/summary/: all_runs.csv
results_maze/: all_runs_maze.csv
results_maze/summary/: all_runs.csv
src/g1_cogar_nav_benchmark/: CMakeLists.txt  package.xml
src/g1_cogar_nav_benchmark/config/: nav2_mppi.yaml  nav2_rpp.yaml  nav_to_pose_dwb_humble.xml  nav_to_pose_humble.xml  nav_to_pose_mppi_humble.xml  nav_to_pose_rpp_humble.xml
src/g1_cogar_nav_benchmark/g1_cogar_nav_benchmark/: metrics.py  planner_profiles.py  scenario_library.py
src/g1_cogar_nav_benchmark/include/g1_cogar_nav_benchmark/: topological_graph.hpp
src/g1_cogar_nav_benchmark/launch/: k3_nav_bringup.launch.py
src/g1_cogar_nav_benchmark/maps/: blockage.pgm  blockage.yaml  clutter.yaml  corridor.pgm  doorway.yaml  house.yaml  maze.pgm
src/g1_cogar_nav_benchmark/scripts/: house_dynamic_obstacle_commander.py  run_all_benchmarks.sh  run_one.sh
src/g1_cogar_nav_benchmark/src/: braitenberg_reflex_node.cpp  topological_goal_manager_cli.cpp
src/g1_cogar_nav_benchmark/tools/: plot_results.py
src/g1_cogar_nav_benchmark/worlds/: clutter.world  house_dynamic.world
src/g1_description_ros2/: package.xml
src/g1_description_ros2/urdf/: g1_29dof.urdf  g1_nav.urdf
src/g1_gazebo/: CMakeLists.txt.save  package.xml
src/g1_gazebo/config/: pointcloud_to_scan.yaml
src/g1_gazebo/launch/: g1_gazebo.launch.py
src/g1_gazebo/worlds/: empty.world
